@@ -325,6 +325,64 @@ if test "x$iconv_ok" = "xno"; then
 fi
 
 dnl ----------------------
+dnl Check if we need to
+dnl support the old 
+dnl iconv interface
+dnl ----------------------
+if test "x$iconv_ok" = "xyes"; then
+  old_libs="$LIBS"
+  LIBS="$old_libs $LIBICONV_LIBS"
+  old_cflags="$CFLAGS"
+  CFLAGS="$CFLAGS -Werror"
+  AC_TRY_COMPILE([#include <iconv.h>],
+[
+     const char *inPtr;
+      char *outPtr;
+      size_t inLeft = 0, outRoom = 0;
+      iconv_t encoder = iconv_open("ASCII", "UTF-8");
+      iconv(encoder, &inPtr, &inLeft, &outPtr, &outRoom);
+],
+iconv_old=yes,iconv_old=no)
+  LIBS="$old_libs"
+  CLFAGS="$old_cflags"
+
+  if test "x$iconv_old" = "xyes"; then
+    AC_DEFINE([inbuf_t], [const char], [Use const char pointers for older libiconv])
+  else
+    AC_DEFINE([inbuf_t], [char], [Use char pointers for newer libiconv])
+  fi
+fi
+
+dnl ----------------------
+dnl Check if we need to
+dnl support the old 
+dnl iconv interface
+dnl ----------------------
+if test "x$iconv_ok" = "xyes"; then
+  old_libs="$LIBS"
+  LIBS="$old_libs $LIBICONV_LIBS"
+  old_cflags="$CFLAGS"
+  CFLAGS="$CFLAGS -Werror"
+  AC_TRY_COMPILE([#include <iconv.h>],
+[
+     const char *inPtr;
+      char *outPtr;
+      size_t inLeft = 0, outRoom = 0;
+      iconv_t encoder = iconv_open("ASCII", "UTF-8");
+      iconv(encoder, &inPtr, &inLeft, &outPtr, &outRoom);
+],
+iconv_old=yes,iconv_old=no)
+  LIBS="$old_libs"
+  CLFAGS="$old_cflags"
+
+  if test "x$iconv_old" = "xyes"; then
+    AC_DEFINE([inbuf_t], [const char], [Use const char pointers for older libiconv])
+  else
+    AC_DEFINE([inbuf_t], [char], [Use char pointers for newer libiconv])
+  fi
+fi
+
+dnl ----------------------
 dnl Test for POSIX threads
 dnl ----------------------
 dnl
